Upgrade to ActiveUI 5 (#89)